# payy

./: .gitattributes  .gitignore  Cargo.toml  README.md  clippy.toml  flake.nix  taplo.toml
pkg/aggregator/: Cargo.toml
pkg/aggregator-interface/: Cargo.toml
pkg/aggregator-interface/src/: error.rs  lib.rs
pkg/aggregator/src/: contracts_adapter.rs  lib.rs  retryable_rollup_contract.rs  smirk_rollup_tree.rs
pkg/aggregator/src/aggregator/: aggregation.rs  fetch.rs  mod.rs  trait_impl.rs  utils.rs
pkg/aggregator/src/block_prover/: error.rs  mod.rs  prepare.rs  prove.rs  tests.rs
pkg/aggregator/src/limited_bb_backend/: limiter.rs  mod.rs  tests.rs
pkg/barretenberg-api-bin/: Cargo.toml
pkg/barretenberg-api-bin/src/: main.rs
pkg/barretenberg-api-client/: Cargo.toml
pkg/barretenberg-api-client/src/: error.rs  lib.rs
pkg/barretenberg-api-client/src/http_transport/: error.rs  mod.rs  protocol.rs  stream.rs
pkg/barretenberg-api-server/: Cargo.toml
pkg/barretenberg-api-server/src/: error.rs  extractors.rs  handlers.rs  lib.rs  server.rs
pkg/barretenberg-api-tests/: Cargo.toml
pkg/barretenberg-api-tests/src/: tests.rs
pkg/barretenberg-cli/: Cargo.toml
pkg/barretenberg-cli/src/: lib.rs
pkg/barretenberg-rs/: Cargo.toml
pkg/barretenberg-rs/src/: binding.rs  lib.rs  mock.rs
pkg/beam-cli/: Cargo.toml  README.md
pkg/beam-cli/src/: abi.rs  chains.rs  cli.rs  config.rs  display.rs  ens.rs  error.rs  evm.rs  human_output.rs  keystore.rs  known_tokens.rs  main.rs  output.rs  prompts.rs  runtime.rs  signer.rs  table.rs  tests.rs  transaction.rs  units.rs  update_cache.rs  update_client.rs
pkg/beam-cli/src/cli/: util.rs
pkg/beam-cli/src/commands/: balance.rs  block.rs  call.rs  chain.rs  erc20.rs  interactive.rs  interactive_helper.rs  interactive_history.rs  interactive_interrupt.rs  interactive_parse.rs  interactive_state.rs  interactive_suggestion.rs  mod.rs  rpc.rs  signing.rs  token_report.rs  tokens.rs  transfer.rs  txn.rs  update.rs  util.rs  wallet.rs
pkg/beam-cli/src/keystore/: crypto.rs
pkg/beam-cli/src/runtime/: wallet_selector.rs
pkg/beam-cli/src/tests/: abi.rs  balance.rs  call.rs  chains.rs  cli.rs  config.rs  display.rs  ens.rs  erc20.rs  evm.rs  evm_retries.rs  fixtures.rs  inspect.rs  interactive.rs  interactive_autocomplete.rs  interactive_history.rs  interactive_interrupts.rs  interactive_state.rs  interactive_tokens.rs  interactive_wallet_selector.rs  keystore.rs  keystore_interrupts.rs  management.rs  output.rs  prompts.rs  rpc_validation.rs  runtime.rs  runtime_permissions.rs  runtime_tokens.rs  token_output.rs  token_validation.rs  tokens.rs  transaction.rs  transaction_submission.rs  update.rs  update_cache_refresh.rs  update_release_selection.rs  update_restart.rs  util.rs  wallet.rs  (+1 more)
pkg/beam-cli/src/update_client/: test_support.rs
pkg/beam-cli/src/util/: abi.rs  abi_topic.rs  bytes.rs  hash.rs  mod.rs  numbers.rs  rlp.rs
pkg/burn-substitutor/: Cargo.toml  README.md
pkg/burn-substitutor/src/: lib.rs
pkg/client-http/: Cargo.toml  README.md
pkg/client-http-longpoll/: Cargo.toml  README.md
pkg/client-http-longpoll/src/: lib.rs
pkg/client-http/src/: builder.rs  error.rs  lib.rs  request.rs  response.rs  util.rs
pkg/contextful/: Cargo.toml  README.md
pkg/contextful-macros/: Cargo.toml
pkg/contextful-macros/src/: lib.rs
pkg/contextful/src/: internal_error.rs  lib.rs
pkg/contextful/src/tests/: flattening.rs  mod.rs
pkg/contracts/: Cargo.toml  README.md
pkg/contracts/src/: across.rs  client.rs  constants.rs  erc20.rs  error.rs  lib.rs  rollup.rs  tests.rs  usdc.rs  wallet.rs
pkg/contracts/src/client/: tests.rs
pkg/country/: Cargo.toml
pkg/country/src/: lib.rs
pkg/currency/: Cargo.toml  README.md
pkg/currency/src/: currency.rs  error.rs  lib.rs  value.rs
pkg/data/: Cargo.toml  README.md
pkg/data/src/: diagnostics.rs  faucet.rs  ip_data.rs  lib.rs  migrate_elements.rs  nft.rs  payment.rs  registry_note.rs  support.rs  support_canned_response.rs  support_tag.rs  udh.rs  wallet.rs  wallet_activity.rs  wallet_auth.rs  wallet_backup.rs  wallet_notes.rs
pkg/database/: Cargo.toml  README.md
pkg/database/migrations/2024-04-22-213220_create_faucet/: down.sql  up.sql
pkg/database/migrations/2024-04-29-041602_create_wallet_backups/: down.sql  up.sql
pkg/database/migrations/2024-06-22-080510_faucet_device/: down.sql  up.sql
pkg/database/migrations/2024-06-26-223352_faucet_phone/: down.sql  (+1 more)
pkg/database/src/: lib.rs  schema.rs
pkg/eip7702/: Cargo.toml
pkg/eip7702/src/: auth.rs  eip712.rs  error.rs  lib.rs  relayer.rs  relayer_test.rs  txn.rs  types.rs
pkg/element/: Cargo.toml
pkg/element/src/: convert.rs  lib.rs  noir.rs  signed_element.rs
pkg/guild-client-http/: Cargo.toml  README.md
pkg/guild-client-http/src/: across.rs  auth.rs  bungee.rs  eip7702.rs  error.rs  lib.rs  migrate.rs  mint.rs  note.rs  ramps.rs  registry.rs  support.rs  wallet.rs  wallet_activity.rs  wallet_notes.rs
pkg/guild-client-http/tests/: http_client_swapping.rs
pkg/guild-interface/: Cargo.toml  README.md
pkg/guild-interface/src/: across.rs  auth.rs  bungee.rs  eip7702.rs  error.rs  lib.rs  migrate.rs  mint.rs  payments.rs  ramps.rs  registry.rs  support.rs  util.rs  wallet.rs  wallet_activity.rs  wallet_notes.rs
pkg/json-store/: Cargo.toml  README.md
pkg/json-store/examples/: basic_usage.rs
pkg/json-store/src/: lib.rs  tests.rs
pkg/kyc/: Cargo.toml  README.md
pkg/kyc/src/: documents.rs  error.rs  kyc.rs  kyc_update_required.rs  lib.rs  types.rs  utils.rs
pkg/kyc/tests/: kyc_tests.rs
pkg/network/: Cargo.toml
pkg/network/src/: error.rs  lib.rs
pkg/node/: Cargo.toml  README.md
pkg/node-client-http/: Cargo.toml  README.md
pkg/node-client-http/src/: block_tree.rs  blocks.rs  elements.rs  error.rs  height.rs  lib.rs  merkle.rs  transaction.rs
pkg/node-interface/: Cargo.toml
pkg/node-interface/src/: blocks.rs  client.rs  elements.rs  error.rs  lib.rs  merkle.rs  transaction.rs
pkg/node/src/: block.rs  cache.rs  errors.rs  lib.rs  mempool.rs  network_handler.rs  node.rs  sync.rs  utxo.rs
(+666 files in other folders)
