[workspace]

resolver = "2"
members = ["pkg/*", "app/packages/react-native-rust-bridge/cpp/rustbridge"]

[workspace.metadata.cargo-machete]
ignored = ["workspace-hack"]

[workspace.metadata.cargo-machete.renamed]
async-stripe = "stripe"

# `opt-level = 1` has a decent impact on perf, and doesn't impact compile times much
[profile.dev]
opt-level = 1

[profile.dev.package.workspace-hack]
# Fixes some spurious rebuilds of workspace-hack
incremental = false

# `opt-level = 3` has a large impact on perf, but does impact compile times. However, we only apply it to dependencies,
# so incremental compilation makes this choice essentially "free" after the first compile
#[profile.dev.package."*"]
#opt-level = 3

# Note: halo2 related patches have been removed as part of migration

[workspace.dependencies]
aggregator-interface = { path = "./pkg/aggregator-interface" }
aggregator = { path = "./pkg/aggregator" }
alfred-http = { path = "./pkg/alfred-http" }
alfred-interface = { path = "./pkg/alfred-interface" }
alfred-provider = { path = "./pkg/alfred-provider" }
burn-substitutor = { path = "./pkg/burn-substitutor" }
barretenberg-interface = { path = "./pkg/barretenberg-interface" }
barretenberg-cli = { path = "./pkg/barretenberg-cli" }
barretenberg-api-interface = { path = "./pkg/barretenberg-api-interface" }
barretenberg-api-server = { path = "./pkg/barretenberg-api-server" }
barretenberg-api-bin = { path = "./pkg/barretenberg-api-bin" }
barretenberg-api-client = { path = "./pkg/barretenberg-api-client" }
barretenberg-api-tests = { path = "./pkg/barretenberg-api-tests" }
barretenberg-rs = { path = "./pkg/barretenberg-rs" }
beam-cli = { path = "./pkg/beam-cli" }
zk-circuits = { path = "./pkg/zk-circuits" }
contextful = { path = "./pkg/contextful" }
contextful-macros = { path = "./pkg/contextful-macros" }
test-spy = { path = "./pkg/test-spy" }
test-spy-macros = { path = "./pkg/test-spy-macros" }
block-store = { path = "./pkg/block-store" }
contracts = { path = "./pkg/contracts" }
constants = { path = "./pkg/constants" }
country = { path = "./pkg/country" }
client-http = { path = "./pkg/client-http" }
client-http-longpoll = { path = "./pkg/client-http-longpoll" }
http-interface = { path = "./pkg/http-interface" }
currency = { path = "./pkg/currency" }
database = { path = "./pkg/database", default-features = false }
data = { path = "./pkg/data" }
diesel-util = { path = "./pkg/diesel-util" }
doomslug = { path = "./pkg/doomslug" }
document-ai-google = { path = "./pkg/document-ai-google" }
document-ai-interface = { path = "./pkg/document-ai-interface" }
element = { path = "./pkg/element" }
encrypt = { path = "./pkg/encrypt" }
eth-util = { path = "./pkg/eth-util" }
faucet = { path = "./pkg/faucet" }
guild-client-http = { path = "./pkg/guild-client-http" }
guild-interface = { path = "./pkg/guild-interface" }
hash = { path = "./pkg/hash" }
hash-poseidon = { path = "./pkg/hash-poseidon" }
hmac-sha256-json = { path = "./pkg/hmac-sha256-json" }
json-store = { path = "./pkg/json-store" }
json-with-logging = { path = "./pkg/json-with-logging" }
serde_yaml = { path = "./pkg/serde_yaml" }
node = { path = "./pkg/node" }
node-client-http = { path = "./pkg/node-client-http" }
node-interface = { path = "./pkg/node-interface" }
network = { path = "./pkg/network" }
notes-interface = { path = "./pkg/notes-interface" }
notes-rpc = { path = "./pkg/notes-rpc" }
notes-storage-interface = { path = "./pkg/notes-storage-interface" }
notes-storage-pg = { path = "./pkg/notes-storage-pg" }
notes = { path = "./pkg/notes" }
rewards-interface = { path = "./pkg/rewards-interface" }
rewards-rpc = { path = "./pkg/rewards-rpc" }
rewards-storage-interface = { path = "./pkg/rewards-storage-interface" }
rewards-storage-pg = { path = "./pkg/rewards-storage-pg" }
rewards = { path = "./pkg/rewards" }
support-interface = { path = "./pkg/support-interface" }
support-rpc = { path = "./pkg/support-rpc" }
support-storage-interface = { path = "./pkg/support-storage-interface" }
support-storage-pg = { path = "./pkg/support-storage-pg" }
support = { path = "./pkg/support" }
p2p = { path = "./pkg/p2p" }
p2p2 = { path = "./pkg/p2p2" }
parse-link = { path = "./pkg/parse-link" }
posthog-interface = { path = "./pkg/posthog-interface" }
posthog = { path = "./pkg/posthog" }
kyc = { path = "./pkg/kyc" }
primitives = { path = "./pkg/primitives" }
prover = { path = "./pkg/prover" }
providers-interface = { path = "./pkg/providers-interface" }
rpc = { path = "./pkg/rpc" }
rpc-error-convert = { path = "./pkg/rpc-error-convert" }
smirk = { path = "./pkg/smirk" }
solid = { path = "./pkg/solid" }
solc-tooling = { path = "./pkg/solc-tooling" }
wallet-core = { path = "./pkg/wallet-core" }
wallet-data-dep = { path = "./pkg/wallet-data-dep" }
wallet-mobile = { path = "./pkg/wallet-mobile" }
wallet-primitives = { path = "./pkg/wallet-primitives" }
wire-message = { path = "./pkg/wire-message" }
wire-message-macro = { path = "./pkg/wire-message-macro" }
whitelist-ips = { path = "./pkg/whitelist-ips" }
testutil = { path = "./pkg/testutil" }
zk-primitives = { path = "./pkg/zk-primitives" }
minimal-poseidon = { path = "./pkg/minimal-poseidon" }
eip7702 = { path = "./pkg/eip7702" }
payy_core = { path = "./pkg/payy_core" }
payy_core_types = { path = "./pkg/payy_core_types" }
payy-note = { path = "./pkg/payy-note" }
noir-abi-inputs-macro = { path = "./pkg/noir-abi-inputs-macro" }
bungee-interface = { path = "./pkg/bungee-interface" }
bungee-client-http = { path = "./pkg/bungee-client-http" }
slack-client-interface = { path = "./pkg/slack-client-interface" }
slack-client-http = { path = "./pkg/slack-client-http" }
ramps-interface = { path = "./pkg/ramps-interface" }
ramps-providers-interface = { path = "./pkg/ramps-providers-interface" }
ramps-storage-interface = { path = "./pkg/ramps-storage-interface" }
ramps-storage-pg = { path = "./pkg/ramps-storage-pg" }
ramps = { path = "./pkg/ramps" }
ramps-rpc = { path = "./pkg/ramps-rpc" }
ramps-notification-interface = { path = "./pkg/ramps-notification-interface" }
ramps-notification = { path = "./pkg/ramps-notification" }
push-notification-interface = { path = "./pkg/push-notification-interface" }
push-notification-expo = { path = "./pkg/push-notification-expo" }
rain-http = { path = "./pkg/rain-http" }
rain-interface = { path = "./pkg/rain-interface" }
rain-provider = { path = "./pkg/rain-provider" }
sumsub-http = { path = "./pkg/sumsub-http" }
sumsub-interface = { path = "./pkg/sumsub-interface" }
sumsub-provider = { path = "./pkg/sumsub-provider" }
manteca-interface = { path = "./pkg/manteca-interface" }
manteca-http = { path = "./pkg/manteca-http" }
manteca-provider = { path = "./pkg/manteca-provider" }

# Reth dependencies (git-based, aligned with reth.rs docs)
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", features = [
  "node",
] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2", features = ["mdbx"] }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }

workspace-hack = "0.1"
ts-rs = { version = "^11.1.0", features = ["format", "chrono-impl", "uuid-impl"] }
actix-cors = "0.6.4"
actix-server = "2.3.0"
actix-web = "4.12.1"
axum = "0.7"
tower = "0.5"
tower-http = "0.6"
http-body-util = "0.1"
hyper = "1"
veil = "0.2.0"
alloy = { version = "1.0.24", features = ["std", "essentials", "reqwest-rustls-tls", "signers"] }
alloy-consensus = "1.4.3"
alloy-eips = "1.4.3"
alloy-evm = "0.26.3"
alloy-genesis = "1.4.3"
alloy-primitives = "1.5.0"
alloy-rpc-types-engine = "1.4.3"
httpmock = "0.8.2"
mime = "0.3.17"
acvm = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14" }
noirc_abi = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14" }
noirc_driver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14" }
noirc_artifacts = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14" }
nargo = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.14" }
actix-multipart = "0.7.2"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
async-stripe = { version = "0.41", default-features = false, features = [
  "full",
  "webhook-events",
  "stream",
  "runtime-tokio-hyper",
  "uuid",
] }
async-trait = "0.1"
async-recursion = "1.1.1"
async-stream = "0.3.6"
async-fn-stream = "0.3.2"
base64 = "0.22.1"
bb_rs = { package = "polybase_bb_rs", git = "https://github.com/polybase/aztec-packages", rev = "7ad5d5c892f1396ca572da4b2e29a761d1f11f1f" } # v3.0.0-manual.20251030-polybase
benchy = "0.1.1"
bigdecimal = { version = "0.4.8", features = ["serde"] }
bitvec = "1.0.1"
blake2b_simd = "1.0"
bs58 = "0.5.1"
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.60", features = ["env", "derive"] }
colored = "3.0.0"
color-eyre = "0.6"
crypto_secretbox = "0.1.1"
dashmap = "6"
deadpool = "0.12"
diesel = { version = "2.3.7", features = [
  "postgres_backend",
  "uuid",
  "chrono",
  "serde_json",
  "64-column-tables",
] }
diesel-async = "0.7.4"
diesel_migrations = "2.3"
tokio-postgres = { version = "0.7.16" }
postgres-native-tls = "0.5.0"
native-tls = "0.2.15"
derive_more = "0.99.17"
dirs = "5.0.1"
dotenvy = "0.15.7"
duct = "1.1"
ethereum-types = "0.14.1"
ethers-solc = "2.0.14"
ethnum = "1.5.0"
expect-test = "1.5.1"
eyre = "0.6"
ff = "0.13.1"
figment = { version = "0.10", features = ["env", "toml"] }
file-lock = "2"
futures = "0.3.26"
futures-timer = "3.0.2"
futures-util = "0.3.29"
halo2curves = "0.1.0"
hex = { version = "0.4", features = ["serde"] }
hmac = "0.12"
home = "0.5.11"
indoc = "2"
indexmap = { version = "2.13", features = ["serde"] }
insta = { version = "1", features = ["json"] }
itertools = "0.14.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
lazy_static = "1.5"
libp2p = { version = "0.51", default-features = false, features = [
  "ping",
  "request-response",
  "identify",
  "gossipsub",
  "macros",
  "tokio",
  "noise",
  "dns",
  "yamux",
  "tcp",
] }
libp2p-core = { version = "0.39.2" }
notify = "6"
num-bigint = "0.4.6"
openssl = { version = "0.10.75", default-features = false }
once_cell = "1.19.0"
parking_lot = "0.12.1"
phonenumber = "0.3"
pretty-hex = "0.3.0"
proptest = "1.6.0"
proc-macro2 = "1.0"
quote = "1.0"
quickcheck = "1.0.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_xorshift = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
rlp = "0.6.1"
rocksdb = "0.21"
rpassword = "7.4.0"
rustc-hex = "2.1.0"
rust-i18n = "3"
rsa = { version = "0.9", features = ["sha1"] }
sentry = "0.46.0"
sentry-tracing = "0.46.2"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.145"
serde_qs = "0.15.0"
serde_bytes = "0.11.19"
serde_yaml_ng = "0.10.0"
bincode = { version = "2.0.1", default-features = false, features = ["derive", "std", "serde"] }
scopeguard = "1.2.0"
unimock = "0.6.8"
secp256k1 = { version = "0.28.0", features = ["rand", "global-context", "recovery"] }
url = { version = "2.5.8" }
semver = "1.0.15"
shlex = "1.3.0"
sha1 = "0.10.1"
sha2 = "0.10.6"
sha3 = "0.10.1"
self-replace = "1.5.0"
spinoff = "0.8.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tracing-stackdriver = { version = "0.7.2", features = ["valuable"] }
static_assertions = "1"
tabular = "0.2.0"
tempdir = "0.3"
tempfile = "3.23.0"
test-strategy = "0.3.1"
thiserror = "1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
toml = { version = "0.9" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = { version = "0.1.37", features = ["valuable"] }
valuable = "0.1"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "std",
  "registry",
  "ansi",
  "json",
] }
typenum = "1.18"
uint = "0.10.0"
unarray = "0.1.4"
urlencoding = "2.1.3"
user-error = "1.2.8"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
web3 = "0.19.0"
which = "4.4"
rustyline = "17.0.2"
serial_test = { version = "3.0.0", features = ["file_locks"] }
# the `de_strict_order` flag is important for maintaining bijection
borsh = { version = "1", features = ["derive", "de_strict_order", "rc"] }
opentelemetry = { version = "0.31.0", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace", "metrics"] }
tracing-opentelemetry = "0.32.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

# utilities for deriving stuff on macros
strum = "0.27"
strum_macros = "0.27.2"
rayon = "1"
derivative = "2"
microtype = "0.7"
rand_derive2 = "0.1"
either = "1.9.0"
flate2 = "1.0.28"
object_store = { version = "0.10.0", features = ["gcp"] }
regex = "1.11.1"
expo_push_notification_client = { git = "https://github.com/polybase/expo-push-notification-client-rust.git", branch = "rustc-1_68_nightly" }
num_cpus = "1.16.0"
mockito = "0.25"
lru = "0.14.0"
paste = "1"
tokio-test = "0.4"
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"
httparse = "1.9"
http = "1.4"

[patch.crates-io]
# rust-i18n uses a deprecated serde_yaml dependency, so we use our shim instead
serde_yaml = { path = "pkg/serde_yaml" }
workspace-hack = { path = "pkg/workspace-hack" }

[workspace.metadata.i18n]
load-path = "./pkg/wallet-core/locales"
