[package]
name = "barretenberg-api-client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
barretenberg-api-interface = { workspace = true }
barretenberg-interface = { workspace = true }
contextful = { workspace = true }
thiserror = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
httparse = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
workspace-hack.workspace = true
