[package]
name = "barretenberg-api-tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
barretenberg-api-client = { workspace = true }
barretenberg-api-interface = { workspace = true }
barretenberg-api-server = { workspace = true }
barretenberg-interface = { workspace = true }
contextful = { workspace = true }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
unimock = { workspace = true }
url = { workspace = true }
workspace-hack.workspace = true
