[package]
name = "beam-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "beam"
path = "src/main.rs"

[dependencies]
argon2 = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
contextful = { workspace = true }
contracts = { workspace = true }
dirs = { workspace = true }
encrypt = { workspace = true }
eth-util = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
json-store = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rlp = { workspace = true }
rpassword = { workspace = true }
rustyline = { workspace = true }
secp256k1 = { workspace = true }
self-replace = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
web3 = { workspace = true }
workspace-hack.workspace = true

[dev-dependencies]
insta = { workspace = true }
mockito = { workspace = true }
serial_test = { workspace = true }
