[package]
name = "client-http"
version = "0.1.0"
edition = "2024"

[dependencies]
http-interface = { workspace = true }
rpc = { workspace = true }

async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
workspace-hack.workspace = true
