[package]
name = "contextful"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Result::context() that wraps the error as Contextful<E> (usable with #[from])"
repository = "https://github.com/polybase/zk-rollup"

[dependencies]
serde = { workspace = true }
contextful-macros = { workspace = true }
workspace-hack.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
