[package]
name = "country"
version = "0.1.0"
edition = "2024"

[features]
diesel = ["dep:diesel"]

[dependencies]
serde = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
workspace-hack.workspace = true

diesel = { workspace = true, optional = true }

[package.metadata.cargo-machete]
ignored = ["strum"]
