[package]
name = "currency"
version = "0.1.0"
edition = "2024"

[features]
diesel = ["dep:diesel", "country/diesel"]
ts-rs = ["dep:ts-rs", "element/ts-rs"]

[dependencies]
country = { workspace = true }
element = { workspace = true }
diesel = { workspace = true, optional = true, features = ["postgres_backend"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true, optional = true }
workspace-hack.workspace = true

[package.metadata.cargo-machete]
ignored = ["strum"]
