[package]
name = "element"
version = "0.1.0"
edition = "2024"

[dependencies]
acvm = { workspace = true }
bitvec = { workspace = true }
diesel = { workspace = true, optional = true, features = ["postgres_backend"] }
ethnum = { workspace = true }
hex = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
borsh = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }
workspace-hack.workspace = true

[dev-dependencies]
test-strategy = { workspace = true }
serde_json = { workspace = true }
insta = { workspace = true }
rand_chacha = { workspace = true }
rand_xorshift = { workspace = true }

[features]
default = ["serde", "rand", "borsh"]
ts-rs = ["dep:ts-rs"]
