[package]
name = "json-store"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
workspace-hack.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempdir = { workspace = true }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
