[package]
name = "network"
version = "0.1.0"
edition = "2024"

[features]
diesel = ["dep:diesel"]
ts-rs = ["dep:ts-rs"]

[dependencies]
diesel = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
veil = { workspace = true }
workspace-hack.workspace = true

[dependencies.ts-rs]
workspace = true
optional = true

[package.metadata.cargo-machete]
ignored = ["strum"]
