[package]
name = "node"
version = "1.3.0"
edition = "2024"

[dependencies]
block-store = { workspace = true }
contracts = { workspace = true }
constants = { workspace = true }
doomslug = { workspace = true }
element = { workspace = true }
node-interface = { workspace = true }
p2p2 = { workspace = true }
primitives = { workspace = true }
prover = { workspace = true }
rpc = { workspace = true }
smirk = { workspace = true }
zk-primitives = { workspace = true }
testutil = { workspace = true }
burn-substitutor = { workspace = true }
zk-circuits = { workspace = true }
barretenberg-cli = { workspace = true }
hash = { workspace = true }

actix-cors = { workspace = true }
actix-server = { workspace = true }
actix-web = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
contextful = { workspace = true }
json-with-logging = { workspace = true }
dirs = { workspace = true }
ethereum-types = { workspace = true }
expect-test = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rustc-hex = { workspace = true }
rocksdb = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
web3 = { workspace = true }
itertools = { workspace = true }
borsh = { workspace = true }
wire-message = { workspace = true }
strum = { workspace = true }
derivative = { workspace = true }
microtype = { workspace = true }
rand_derive2 = { workspace = true }
either = { workspace = true }
tokio-postgres = { workspace = true }
postgres-native-tls = { workspace = true }
native-tls = { workspace = true }
scopeguard = { workspace = true }
workspace-hack.workspace = true

[dev-dependencies]
dotenvy = { workspace = true }
reqwest = { workspace = true }
tempdir = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
aggregator = { workspace = true }
aggregator-interface = { workspace = true }
barretenberg-interface = { workspace = true }
node-client-http = { workspace = true }
